<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/algebra">
        <menu>
            <item
                android:id="@+id/nav_sci_calc"
                android:icon="@drawable/ic_calculator_black"
                android:title="@string/science_calculator" />
            <!--<item-->
            <!--android:id="@+id/nav_hand_calc"-->
            <!--android:icon="@drawable/ic_gesture_black_24dp"-->
            <!--android:title="@string/hand_calc" />-->

            <!--<item-->
            <!--android:id="@+id/nav_hand_geo"-->
            <!--android:icon="@drawable/ic_action_name"-->
            <!--android:title="@string/hand_geome" />-->
            <item
                android:id="@+id/nav_base"
                android:icon="@drawable/ic_base_black"
                android:title="@string/logic_calculator" />
            <item
                android:id="@+id/nav_solve_equation"
                android:icon="@drawable/ic_functions_2_black"
                android:title="@string/solve_equation" />

            <item
                android:id="@+id/nav_graph"
                android:icon="@drawable/ic_graph_black"
                android:title="@string/title_activity_graph" />





            <item
                android:id="@+id/nav_unit"
                android:icon="@drawable/ic_unit_converter"
                android:title="@string/all_unit_converter" />


        </menu>
    </item>

    <item android:title="@string/analytics">
        <menu>
            <item
                android:id="@+id/nav_derivitive"
                android:icon="@drawable/ic_der_black"
                android:title="@string/derivative" />

            <item
                android:id="@+id/nav_primitive"
                android:icon="@drawable/ic_primitive_black"
                android:title="@string/primitive" />

            <item
                android:id="@+id/nav_integrate"
                android:icon="@drawable/ic_integral"
                android:title="@string/integrate" />

            <item
                android:id="@+id/nav_limit"
                android:icon="@drawable/ic_lim_black"
                android:title="@string/limit" />
        </menu>
    </item>




</menu>

